objects/WorkType.object
<CustomObject>
    <fields>
        <fullName>FSL__Due_Date_Offset__c</fullName>
        <description>Minutes</description>
        <inlineHelpText>Calculates the Due Date by adding Minutes to the Service creation time, reflecting the organisation&apos;s internal SLA</inlineHelpText>
        <label>Due Date Offset</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Exact_Appointments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exact Appointments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Live_with_WM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live with WM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repair_Difficulty__c</fullName>
        <label>Repair Difficulty</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_WorkTypes</fullName>
        <columns>Name</columns>
        <columns>Id</columns>
        <columns>EstimatedDuration</columns>
        <columns>DurationType</columns>
        <columns>Inactive__c</columns>
        <columns>Repair_Difficulty__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Types</label>
    </listViews>
    <listViews>
        <fullName>My_WorkTypes</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Types</label>
    </listViews>
    <listViews>
        <fullName>WM_Work_Types</fullName>
        <columns>Name</columns>
        <columns>Id</columns>
        <columns>EstimatedDuration</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Live_with_WM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>WM Work Types</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Service_App_Job_Name</fullName>
        <active>true</active>
        <description>This Validation Rule prevents users from changing the name of the &quot;Service App Job&quot; Work Type because it is used in various pieces of automation which would break if the name was changed.</description>
        <errorConditionFormula>AND(
ISCHANGED(Name),
CONTAINS( PRIORVALUE(Name) ,&quot;Service App Job&quot;) )</errorConditionFormula>
        <errorMessage>You cannot change the name of this Work Type because it is utilized in automation within the org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_Modification_Sys_Admins_Only</fullName>
        <active>true</active>
        <description>Only system administrators may modify the work type name.</description>
        <errorConditionFormula>AND(NOT(OR( 
$Profile.Name=&quot;System Administrator&quot;, $Permission.Work_Types_Bypass_Validation_Rules =TRUE,$Profile.Name=&quot;Accel Call Center&quot;)), 
ISCHANGED( Name ))</errorConditionFormula>
        <errorMessage>You do not have permission to edit this field. Please contact your system administrator.</errorMessage>
    </validationRules>
</CustomObject>